fixed z-index logo

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -19,6 +19,7 @@ background-color: transparent;
 }
 
 .page-header__logo {
+    z-index: 99;
 padding-top: 8px;
 padding-bottom: 8px;
 
